Improve javadoc